<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="8dp"
    android:background="@drawable/rounded_corners"
    android:orientation="vertical">

    <TextView
        android:id="@+id/state_name_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:ellipsize="end"
        android:textAlignment="center"
        android:maxLines="1"
        tools:text="Uttar Pradesh"
        style="@style/TextAppearance.CovidTracker.Headline5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/label_linearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmed_text"
                android:textAlignment="center"
                style="@style/TextAppearance.CovidTracker.Headline6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/active_text"
                android:textAlignment="center"
                style="@style/TextAppearance.CovidTracker.Headline6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recovered_text"
                android:textAlignment="center"
                style="@style/TextAppearance.CovidTracker.Headline6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deceased_text"
                android:textAlignment="center"
                style="@style/TextAppearance.CovidTracker.Headline6"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/number_linearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_weight="2">

            <TextView
                android:id="@+id/item_confirmed_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmed_text"
                tools:text="10,000,000"
                android:textAlignment="center"
                style="@style/TextAppearance.CovidTracker.Headline6"/>

            <TextView
                android:id="@+id/item_active_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="10,000,000"
                android:textAlignment="center"
                style="@style/TextAppearance.CovidTracker.Headline6"/>

            <TextView
                android:id="@+id/item_recovered_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="10,000,000"
                android:textAlignment="center"
                style="@style/TextAppearance.CovidTracker.Headline6"/>

            <TextView
                android:id="@+id/item_deceased_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deceased_text"
                tools:text="10,000,000"
                android:textAlignment="center"
                style="@style/TextAppearance.CovidTracker.Headline6"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/delta_numbers_linearLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginEnd="4dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/item_confirmed_delta_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmed_text"
                android:layout_marginTop="4dp"
                tools:text="+ 100,000"
                android:textColor="@color/confirmed_card_color"
                android:textAlignment="center"
                style="@style/TextAppearance.CovidTracker.Subtitle1"/>

            <TextView
                android:id="@+id/item_active_delta_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                tools:text="- 100,000"
                android:textColor="@color/active_card_color"
                android:textAlignment="center"
                style="@style/TextAppearance.CovidTracker.Subtitle1"/>

            <TextView
                android:id="@+id/item_recovered_delta_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                tools:text="+ 100,000"
                android:textColor="@color/recovered_card_color"
                android:textAlignment="center"
                style="@style/TextAppearance.CovidTracker.Subtitle1"/>

            <TextView
                android:id="@+id/item_deceased_delta_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deceased_text"
                android:layout_marginTop="6dp"
                tools:text="+ 100,000"
                android:textColor="@color/deceased_card_color"
                android:textAlignment="center"
                style="@style/TextAppearance.CovidTracker.Subtitle1"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>