<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.IndiaNumbersFragment">

    <ScrollView
        android:id="@+id/india_numbers_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inner_CL"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintEnd_toEndOf="@+id/indiaTextView"
            app:layout_constraintStart_toEndOf="@+id/indiaTextView">

            <TextView
                android:id="@+id/indiaTextView"
                style="@style/TextAppearance.CovidTracker.Headline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/india_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.155"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/confirmedCL"
                android:layout_width="@dimen/card_dimensions"
                android:layout_height="@dimen/card_dimensions"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/confirmed_card_color"
                android:elevation="8dp"
                app:layout_constraintEnd_toStartOf="@+id/activeCL"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/indiaTextView">

                <TextView
                    android:id="@+id/confirmedText"
                    style="@style/TextAppearance.CovidTracker.Headline5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/confirmed_text"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:layout_constraintLeft_toLeftOf="@+id/confirmedCL"
                    app:layout_constraintRight_toRightOf="@+id/confirmedCL"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/confirmedNumber"
                    style="@style/TextAppearance.CovidTracker.Headline6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/white"
                    app:layout_constraintLeft_toLeftOf="@+id/confirmedCL"
                    app:layout_constraintRight_toRightOf="@+id/confirmedCL"
                    app:layout_constraintTop_toBottomOf="@id/confirmedText"
                    tools:ignore="RtlSymmetry"
                    tools:text="10,000,000" />

                <TextView
                    android:id="@+id/confirmed_delta_text"
                    style="@style/TextAppearance.CovidTracker.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/confirmedNumberIncrease"
                    app:layout_constraintEnd_toStartOf="@+id/confirmedNumberIncrease"
                    app:layout_constraintLeft_toLeftOf="@id/confirmedCL"
                    app:layout_constraintTop_toTopOf="@id/confirmedNumberIncrease"
                    tools:text="+" />

                <TextView
                    android:id="@+id/confirmedNumberIncrease"
                    style="@style/TextAppearance.CovidTracker.Subtitle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/white"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintRight_toRightOf="@+id/confirmedCL"
                    app:layout_constraintTop_toBottomOf="@id/confirmedNumber"
                    tools:ignore="RtlSymmetry"
                    tools:text="100,000" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activeCL"
                android:layout_width="@dimen/card_dimensions"
                android:layout_height="@dimen/card_dimensions"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/active_card_color"
                android:elevation="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/confirmedCL"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/confirmedCL"
                app:layout_constraintTop_toTopOf="@+id/confirmedCL">

                <TextView
                    android:id="@+id/activeText"
                    style="@style/TextAppearance.CovidTracker.Headline5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/active_text"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:layout_constraintLeft_toLeftOf="@+id/activeCL"
                    app:layout_constraintRight_toRightOf="@+id/activeCL"
                    app:layout_constraintTop_toTopOf="@+id/activeCL" />

                <TextView
                    android:id="@+id/activeNumber"
                    style="@style/TextAppearance.CovidTracker.Headline6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/white"
                    app:layout_constraintLeft_toLeftOf="@+id/activeCL"
                    app:layout_constraintRight_toRightOf="@+id/activeCL"
                    app:layout_constraintTop_toBottomOf="@+id/activeText"
                    tools:ignore="RtlSymmetry"
                    tools:text="10,000,000" />

                <TextView
                    android:id="@+id/active_delta_text"
                    style="@style/TextAppearance.CovidTracker.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/activeNumberIncrease"
                    app:layout_constraintEnd_toStartOf="@+id/activeNumberIncrease"
                    app:layout_constraintLeft_toLeftOf="@id/activeCL"
                    app:layout_constraintTop_toTopOf="@id/activeNumberIncrease"
                    tools:text="-" />

                <TextView
                    android:id="@+id/activeNumberIncrease"
                    style="@style/TextAppearance.CovidTracker.Subtitle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/white"
                    app:layout_constraintRight_toRightOf="@+id/activeCL"
                    app:layout_constraintTop_toBottomOf="@+id/activeNumber"
                    tools:ignore="RtlSymmetry"
                    tools:text="100,000" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/recoveredCL"
                android:layout_width="@dimen/card_dimensions"
                android:layout_height="@dimen/card_dimensions"
                android:layout_marginTop="60dp"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/recovered_card_color"
                android:elevation="8dp"
                app:layout_constraintEnd_toStartOf="@+id/deceasedCL"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmedCL">

                <TextView
                    android:id="@+id/recoveredText"
                    style="@style/TextAppearance.CovidTracker.Headline5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/recovered_text"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:layout_constraintLeft_toLeftOf="@+id/recoveredCL"
                    app:layout_constraintRight_toRightOf="@+id/recoveredCL"
                    app:layout_constraintTop_toTopOf="@+id/recoveredCL" />

                <TextView
                    android:id="@+id/recoveredNumber"
                    style="@style/TextAppearance.CovidTracker.Headline6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/white"
                    app:layout_constraintLeft_toLeftOf="@+id/recoveredCL"
                    app:layout_constraintRight_toRightOf="@+id/recoveredCL"
                    app:layout_constraintTop_toBottomOf="@+id/recoveredText"
                    tools:ignore="RtlSymmetry"
                    tools:text="10,000,000" />

                <TextView
                    android:id="@+id/recovered_delta_text"
                    style="@style/TextAppearance.CovidTracker.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/recoveredNumberIncrease"
                    app:layout_constraintEnd_toStartOf="@+id/recoveredNumberIncrease"
                    app:layout_constraintLeft_toLeftOf="@id/recoveredCL"
                    app:layout_constraintTop_toTopOf="@id/recoveredNumberIncrease"
                    tools:text="+" />

                <TextView
                    android:id="@+id/recoveredNumberIncrease"
                    style="@style/TextAppearance.CovidTracker.Subtitle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/white"
                    app:layout_constraintRight_toRightOf="@+id/recoveredCL"
                    app:layout_constraintTop_toBottomOf="@+id/recoveredNumber"
                    tools:ignore="RtlSymmetry"
                    tools:text="100,000" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/deceasedCL"
                android:layout_width="@dimen/card_dimensions"
                android:layout_height="@dimen/card_dimensions"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/deceased_card_color"
                android:elevation="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/recoveredCL"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/recoveredCL"
                app:layout_constraintTop_toTopOf="@+id/recoveredCL">

                <TextView
                    android:id="@+id/deceasedText"
                    style="@style/TextAppearance.CovidTracker.Headline5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/deceased_text"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:layout_constraintLeft_toLeftOf="@+id/deceasedCL"
                    app:layout_constraintRight_toRightOf="@+id/deceasedCL"
                    app:layout_constraintTop_toTopOf="@+id/deceasedCL" />

                <TextView
                    android:id="@+id/deceasedNumber"
                    style="@style/TextAppearance.CovidTracker.Headline6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/white"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="@+id/deceasedCL"
                    app:layout_constraintRight_toRightOf="@+id/deceasedCL"
                    app:layout_constraintTop_toBottomOf="@id/deceasedText"
                    tools:ignore="RtlSymmetry"
                    tools:text="10,000,000" />

                <TextView
                    android:id="@+id/deceasedNumberIncrease"
                    style="@style/TextAppearance.CovidTracker.Subtitle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/white"
                    app:layout_constraintRight_toRightOf="@+id/deceasedCL"
                    app:layout_constraintTop_toBottomOf="@+id/deceasedNumber"
                    tools:ignore="RtlSymmetry"
                    tools:text="100,000" />

                <TextView
                    android:id="@+id/deceased_delta_text"
                    style="@style/TextAppearance.CovidTracker.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/deceasedNumberIncrease"
                    app:layout_constraintTop_toTopOf="@id/deceasedNumberIncrease"
                    tools:text="+" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/dateTextView"
                style="@style/TextAppearance.CovidTracker.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="6dp"
                android:text="@string/as_on_date"
                android:textAlignment="center"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/deceasedCL" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
